compiler/tests/en/errors/unused_var.salam
// EXPECT: E059
func main:
    x := 5
    println "x"
end
